# simple_game_server

./: .gitignore  README.md
exe/: start-all.bat  start-all.sh
exe/config/: servers.json
share/lib/: libboost_atomic-vc141-mt-gd-x64-1_74.lib  libboost_chrono-vc141-mt-gd-x64-1_74.lib  libboost_date_time-vc141-mt-gd-x64-1_74.lib
simple_server_vcxproj/: simple_server.sln
simple_server_vcxproj/frame/: frame.vcxproj  frame.vcxproj.filters
simple_server_vcxproj/gm/: gm.vcxproj  gm.vcxproj.filters
simple_server_vcxproj/http_proxy/: http_proxy.vcxproj  http_proxy.vcxproj.filters
simple_server_vcxproj/share/: share.vcxproj  share.vcxproj.filters
src/: CMakeList.txt  CMakeLists.txt  cmake_clean.sh
src/frame/: CMakeLists.txt  config.cpp  config.h  logger.cpp  logger.h  main.cpp  server_manager.cpp  server_manager.h
src/gm/: .CMakeLists.txt.swp  CMakeLists.txt  main.cpp
src/http_proxy/: CMakeLists.txt  main.cpp  request.hpp
src/share/: CMakeLists.txt  config.cpp  config.h  connection.cpp  connection.hpp  connection_manager.cpp  connection_manager.hpp  header.hpp  logger.cpp  logger.h  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  request_parser.hpp  server.cpp  server.hpp  server_manager.cpp  server_manager.h  server_net.cpp  server_net.h  server_session.cpp  server_session.h  session_manager.cpp  session_manager.h  util.h
